Criação do template do projeto

--- a/Livraria.UI.SIte/Livraria.UI.SIte.csproj
+++ b/Livraria.UI.SIte/Livraria.UI.SIte.csproj
@@ -5,11 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="2.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink.Loader" Version="14.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Livraria.Application\Livraria.Application.csproj" />
+    <ProjectReference Include="..\Livraria.Infra.CrossCutting.IoC\Livraria.Infra.CrossCutting.IoC.csproj" />
   </ItemGroup>
 
 </Project>
