Implementação do cadastro de livros

--- a/Livraria.UI.SIte/Properties/launchSettings.json
+++ b/Livraria.UI.SIte/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Livraria.UI.SIte": {
+    "Livraria.UI.Site": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
